@@ -1,8 +1,8 @@
-Text      test 5~
-Body            test5
+Text       stuck in a room with no exits~
+Body      I'm stuck in a room, that I suspect was supposed to be a death trap, in the deep, dark forest. three huge poinsonous spiders attacked me but I didn't die and now I'm in a room with no exits.
 ~
-Name      Rumble~
-Level     34
-Room      1204
+Name      Stickley~
+Level     8
+Room      6131
 Flags     0 0 0 0
 End
